--- a/server/.pylintrc
+++ b/server/.pylintrc
@@ -92,7 +92,10 @@ disable=raw-checker-failed,
         deprecated-pragma,
         use-symbolic-message-instead,
         import-outside-toplevel,
-        import-error
+        import-error,
+        C0114,
+        C0115,
+        C0116
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
