--- a/server/.pylintrc
+++ b/server/.pylintrc
@@ -1,6 +1,7 @@
 [MASTER]
 init-hook="from pylint.config import find_pylintrc; import os, sys; sys.path.append(os.path.dirname(find_pylintrc()))"
 load-plugins=pylint_django
+ignore=cloudant,functions
 
 [FORMAT]
 max-line-length=120
@@ -8,4 +9,4 @@ max-line-length=120
 [MESSAGES CONTROL]
 # C0111 Missing docstring
 # R0914 Too many local variables
-disable=C0111,R0914
+disable=C0111,R0914,W0703
