--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,9 +1,9 @@
-requests
 Django==3.1.3
+requests==2.28.1
 Pillow==8.0.1
 jinja2==3.0
 gunicorn==20.1.0
-contextvars
+contextvars==2.4
 typing-extensions==4.1.1
 aiohttp==3.8.1
 click==8.0.4
@@ -12,5 +12,5 @@ multidict==4.5
 ibm-cloud-sdk-core==3.10.0
 ibm-watson==5.2.2
 ibmcloudant==0.0.34
-pylint
+pylint==2.15.9
 pylint-django==2.5.3
